basic page shhowing stuff added